--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "ui-router#~0.2.15",
-    "bootstrap": "^3.2.0"
+    "bootstrap": "^3.2.0",
+    "ng-lodash": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
